croupier-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: permedcoe
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: atosariapclab/croupier-backend
        name: backend
        ports:
        - containerPort: 8000
          protocol: TCP
